<resources>
    <string name="app_name">Annet Homestay</string>
    <string name="opsi_login">Selamat Datang di Annet Homestay</string>
    <string name="inp_fname">Nama depan</string>
    <string name="inp_rname">Nama belakang</string>
    <string name="inp_email">Email</string>
    <string name="inp_pass">Password</string>
    <string name="inp_phone">No telepon</string>
    <string name="belum_daftar">Belum memiliki akun?</string>
    <string name="sudah_daftar">Sudah memiliki akun?</string>
    <string name="log">Login</string>
    <string name="reg">Register</string>
    <string name="about_head">About us</string>
    <string name="about_promo">Promo</string>
    <string name="rek_obj">Rekomendasi Objek Sekitar</string>
    <string name="profile">Profile</string>
    <string name="status_pesan">Pesanan kamu sedang kami proses\nSilahkan tunggu pesan dari kami</string>
    <string name="batal_pesan">Apakah kamu yakin ingin membatalkan pesanan yang telah dibuat?</string>
    <string name="pil_penginapan">Pilihan Penginapan</string>
    <string name="det_penginapan">Detail Penginapan</string>
    <string name="payment_method_prompt">Pilih Pembayaran</string>
    <string name="jumlah_hari_prompt">Pilih Jumlah Hari</string>
    <string name="Jumlah_kamar_prompt">Pilih Kamar</string>
    <string-array name="spinner_batal">
        <item>Salah memesan</item>
        <item>Ingin mengganti pesanan</item>
        <item>Batal rencana untuk memesan</item>
        <item>Tidak ingin mengisi</item>
    </string-array>
    <string-array name="gladag1">
        <item>gladag1</item>
        <item>gladag2</item>
        <item>gladag3</item>
        <item>gladag4</item>
        <item>gladag5</item>
        <item>gladag6</item>
    </string-array>
    <string-array name="glamping1">
        <item>limasan1</item>
        <item>limasan2</item>
        <item>limasan3</item>
        <item>limasan4</item>
        <item>limasan5</item>
    </string-array>
    <string name="aturan_kendaraan">1. Pembayaran dapat dilakukan secara penuh atau dengan DP melalui aplikasi.
        \n\n2. Pelunasan dapat dilakukan saat kendaraan dikembalikan.
        \n\n3. Jika penyewa adalah tamu penginapan, pengelola akan mengantarkan kendaraan ke lokasi.
        \n\n4. Durasi sewa kendaraan akan berakhir saat tamu melakukan check-out atau ketika waktu sewa telah tercapai.
        \n\n5. Jika penyewa bukan tamu penginapan, pengembalian kendaraan harus sesuai dengan waktu pengambilan (24 jam).
        \n\n6. Kerusakan kendaraan akan ditanggung oleh penyewa.
        \n\n7. Pembatalan hanya berlaku dengan pengembalian dana jika transaksi DP Anda melebihi Rp100.000.</string>
    <string name="aturan_pengianpan">1. Pembayaran dapat dilakukan secara penuh atau dengan DP melalui aplikasi.
        \n\n2. Pelunasan dapat dilakukan saat check-in atau check-out.
        \n\n3. Tamu wajib memberikan jaminan berupa identitas resmi (KTP atau sejenis).
        \n\n4. Jadwal check-in adalah pukul 14.00 dan check-out adalah pukul 12.00. Jika check-in sebelum jam tersebut atau check-out setelah jam tersebut, akan dikenakan biaya tambahan.
        \n\n5. Homestay tidak bertanggung jawab atas kehilangan atau kerusakan barang milik tamu.
        \n\n6. Tamu tidak diperbolehkan membawa binatang peliharaan, minuman keras, benda tajam, atau obat-obatan terlarang.
        \n\n7. Pembatalan hanya berlaku dengan pengembalian dana jika transaksi DP Anda melebihi Rp100.000.</string>
    <string name="about_desc">\t\tSelamat datang di Annet Homestay, sebuah tempat di mana keindahan alam bertemu dengan ketenangan pedesaan. Terletak dengan sempurna di tengah-tengah keindahan alam Indonesia, homestay kami menawarkan pengalaman menginap yang tak terlupakan bagi setiap tamu.
        \n\n\t\tDengan pemandangan langsung yang memukau ke Gunung Merapi, tamu kami dapat menikmati keindahan alam yang menakjubkan sepanjang waktu. Udara segar dan sejuk dari pedesaan sekitar memberikan kesempatan bagi tamu untuk bernapas lega dan merasakan kedamaian yang langka di tengah kehidupan yang sibuk.
        \n\n\t\tAnnet Homestay bukan hanya sekadar tempat menginap, tapi juga tempat untuk terhubung kembali dengan alam dan budaya lokal. Dikelilingi oleh kebun yang hijau dan alam yang mempesona, tamu kami dapat menjelajahi lingkungan sekitar, berinteraksi dengan penduduk setempat, dan menikmati kegiatan-kegiatan alam yang menyegarkan.
        \n\n\t\tTersedia berbagai macam akomodasi yang nyaman dan fasilitas yang lengkap untuk memenuhi kebutuhan setiap tamu, mulai dari kamar-kamar yang bersih dan nyaman hingga ruang terbuka untuk bersantai. Dengan staf yang ramah dan penuh perhatian, kami berkomitmen untuk memberikan pengalaman menginap yang istimewa dan memuaskan bagi setiap tamu.
        \n\n\t\tMari bergabung dengan kami di Annet Homestay dan rasakan keindahan alam yang menakjubkan, kedamaian pedesaan yang menenangkan, dan keramahan hangat dari kami. Ini bukan sekadar penginapan, tapi pengalaman yang akan Anda kenang selamanya.</string>
    <string name="jejamuran">\t\tRumah Makan Jejamuran di Yogyakarta adalah destinasi kuliner yang unik dengan spesialisasi pada hidangan berbahan dasar jamur. Dengan suasana yang nyaman dan alami, restoran ini menyajikan berbagai menu kreatif seperti sate jamur, tongseng jamur, dan aneka olahan jamur lainnya. Interiornya yang menggunakan elemen kayu dan tanaman menciptakan atmosfer sejuk dan menenangkan, menjadikan pengalaman bersantap semakin menyenangkan.
        \n\n\t\tSelain menyajikan hidangan lezat, Jejamuran juga mengedukasi pengunjung tentang berbagai jenis jamur dan manfaat kesehatannya. Pengunjung dapat belajar tentang budidaya jamur dan khasiatnya, menjadikan restoran ini tidak hanya tempat makan, tetapi juga tempat belajar. Dengan layanan ramah dan suasana yang nyaman, Jejamuran adalah pilihan tepat untuk menikmati kuliner sehat dan berbeda di Yogyakarta.</string>
    <string name="obelix">\t\tObelix Village adalah destinasi wisata yang menarik di Yogyakarta, menawarkan pengalaman unik dengan pemandangan alam yang indah dan berbagai aktivitas rekreasi. Terletak di kawasan yang tenang dan asri, tempat ini menyediakan suasana yang cocok untuk bersantai dan menikmati keindahan alam. Pengunjung dapat menikmati pemandangan yang menakjubkan dari bukit-bukit dan hamparan hijau yang luas, serta berfoto di berbagai spot yang instagrammable.
        \n\n\t\tSelain pemandangan alam yang memukau, Obelix Village juga menawarkan berbagai fasilitas rekreasi dan edukasi. Ada area bermain anak, kebun binatang mini, dan taman bunga yang indah, menjadikannya tempat yang sempurna untuk keluarga dan anak-anak. Pengunjung juga dapat menikmati kuliner lokal di restoran yang ada, membuat kunjungan ke Obelix Village menjadi pengalaman yang lengkap dan menyenangkan.</string>
    <string name="maps_jejamuran">https://www.google.com/maps/place/Jejamuran/@-7.7053814,110.3585889,17z/data=!3m1!4b1!4m6!3m5!1s0x2e7a5f4b00000001:0xb991824588eb34e1!8m2!3d-7.7053814!4d110.3611638!16s%2Fg%2F1pzq550f5?entry=ttu</string>
    <string name="maps_obelix">https://www.google.com/maps/place/Obelix+Village/@-7.6829053,110.366628,15z/data=!4m6!3m5!1s0x2e7a5f6a30f765dd:0x42930b153c711354!8m2!3d-7.68783!4d110.373608!16s%2Fg%2F11spg0pfqg?entry=ttu</string>
    <string name="pil_ken">Pilihan Kendaraan</string>
    <string name="pembayaran">Selesaikan pembayaran, pembayaran diproses maksimal 1X24 Jam.\n\nJika status pembayaran belum dibayar hingga batas waktu, dimohon untuk menghubungi Admin via WA atau Instagram</string>
    <string name="desk_glamping">Penginapan tipe Glamping ini punya kapasitas hingga 5 orang dan tersedia free extra bed juga! Cocok banget untuk menginap bersama keluarga tercinta🛏️
        \n\nYuk, nikmati momen kebersamaan yang tidak terlupakan di tempat yang nyaman dan indah🏞️✨
</string>
    <string name="total_transaksi">Total Transaksi: %d</string>
</resources>