<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

    <LinearLayout
        android:id="@+id/head_penginapan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/main_red">
        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daftar"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_penginapan"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp">
        <ImageView
            android:id="@+id/img_reg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/promo2"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:elevation="15dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp">
            <EditText
                android:id="@+id/namaDepan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inp_fname"
                android:inputType="text"
                android:layout_marginBottom="15dp"
                android:background="@drawable/et_rounded"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/namaBelakang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inp_rname"
                android:inputType="text"
                android:layout_below="@+id/namaDepan"
                android:layout_marginBottom="15dp"
                android:background="@drawable/et_rounded"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/registerPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inp_phone"
                android:inputType="number"
                android:layout_below="@+id/namaBelakang"
                android:layout_marginBottom="15dp"
                android:background="@drawable/et_rounded"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inp_email"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/registerPhone"
                android:layout_marginBottom="15dp"
                android:background="@drawable/et_rounded"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry,TextFields" />
            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inp_pass"
                android:inputType="textPassword"
                android:layout_below="@+id/registerEmail"
                android:layout_marginBottom="15dp"
                android:background="@drawable/et_rounded"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:id="@+id/sudah_daftar"
                android:layout_below="@+id/registerPassword"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sudah_daftar"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Masuk!"
                    android:textColor="@color/main_red"
                    android:textSize="13sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/reg"
                android:layout_gravity="bottom"
                android:background="@drawable/bt_rounded"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_below="@+id/sudah_daftar"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>