<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPesanPenginapan">

    <LinearLayout
        android:id="@+id/head_penginapan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/main_red">
        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:layout_margin="15dp"/>
        <TextView
            android:id="@+id/text_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/det_penginapan"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head_penginapan">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ViewFlipper
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:flipInterval="3000"
                android:autoStart="true"
                android:inAnimation="@anim/slide_in_right"
                android:outAnimation="@anim/slide_out_left"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/peng_atas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_margin="10dp"
                android:layout_below="@+id/slider">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/peng_nama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nama Penginapan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="5dp"/>
                    <TextView
                        android:id="@+id/peng_deskrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Deskripsi Penginapan"
                        android:textSize="15sp"
                        android:layout_below="@id/peng_nama"
                        android:justificationMode="inter_word"
                        android:textColor="@color/black"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/peng_tengah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peng_atas"
                app:cardCornerRadius="5dp"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/peng_pesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pemesanan"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="5dp"/>
                    <LinearLayout
                        android:id="@+id/line_kap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@id/peng_pesan">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kapasitas "
                            android:textColor="@color/black"
                            android:layout_marginBottom="5dp"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/peng_kapasitas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/peng_pesan"
                            android:text="2 - 5"
                            android:textSize="15sp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" orang"
                            android:textColor="@color/black"
                            android:layout_marginBottom="5dp"
                            android:textSize="15sp"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/peng_harga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Harga Permalam"
                        android:textColor="@color/black"
                        android:layout_below="@id/line_kap"
                        android:textSize="15sp"
                        android:layout_marginBottom="25dp"/>
                    <EditText
                        android:id="@+id/peng_tgl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Pilih tanggal"
                        android:textSize="15sp"
                        android:focusable="false"
                        android:clickable="true"
                        android:layout_below="@id/peng_harga"
                        android:background="@drawable/et_rounded"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/bt_cek_peng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:textSize="15sp"
                        android:background="@drawable/bt_rounded"
                        android:text="Cek"
                        android:textColor="@color/white"
                        android:layout_toEndOf="@+id/peng_tgl"
                        android:layout_below="@id/peng_harga"
                        android:layout_marginStart="5dp"/>
                    <TextView
                        android:id="@+id/peng_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tersisa"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:layout_below="@+id/peng_tgl"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"/>
                    <TextView
                        android:id="@+id/peng_stok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="15sp"
                        android:textColor="@color/main_red"
                        android:layout_toEndOf="@+id/peng_stat"
                        android:layout_below="@+id/peng_tgl"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"/>
                    <LinearLayout
                        android:id="@+id/jml_pesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@id/peng_stok"
                        android:layout_marginTop="25dp">
                        <TextView
                            android:id="@+id/jml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:text="Jumlah Kamar"
                            android:textColor="@color/black"/>
                        <Spinner
                            android:id="@+id/peng_jml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:prompt="@string/Jumlah_kamar_prompt"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/durasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@id/jml_pesan">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:text="Durasi hari"
                            android:textColor="@color/black"/>
                        <Spinner
                            android:id="@+id/peng_durasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:prompt="@string/jumlah_hari_prompt"
                            android:layout_marginBottom="5dp"/>
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/peng_bayar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:prompt="@string/payment_method_prompt"
                        android:layout_below="@id/durasi"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="5dp"/>


                    <LinearLayout
                        android:id="@+id/det_bank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        android:paddingVertical="5dp"
                        android:layout_below="@+id/peng_bayar">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No Rekening: 1234567890"
                            android:id="@+id/bankAccountTextView"
                            android:textSize="15sp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_copy"
                            android:id="@+id/copyIcon"
                            android:layout_marginLeft="5dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@id/det_bank">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="Total bayar DP Rp "/>
                        <TextView
                            android:id="@+id/peng_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="500.000"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/bt_pesan_peng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="Pesan"
                        android:layout_below="@id/total"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:background="@drawable/bt_rounded"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/peng_bawah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                android:layout_below="@id/peng_tengah">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aturan Pemesanan Penginapan"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aturan_pengianpan"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>